# dem-bones

./: CMakeLists.txt  README.md
cmake/: FindAlembic.cmake  FindFBXSDK.cmake
include/DemBones/: DemBones.h  DemBonesExt.h
src/command/: AbcReader.cpp  FbxReader.cpp  FbxShared.cpp  FbxWriter.cpp
